:lipstick: fixed bottom white space

--- a/components/Aligner.module.css
+++ b/components/Aligner.module.css
@@ -1,7 +1,8 @@
 .container{
     height: 100vh;
+    min-height: calc(100vh + 6rem);
     width: 60vw;
-    margin: 0 6rem;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
+    margin: 10rem 6rem;
+    padding-top: 1rem;
+    padding-bottom: 5rem;
 }
