--- a/components/Navigation.module.css
+++ b/components/Navigation.module.css
@@ -1,7 +1,3 @@
-.container{
-    margin-bottom: 1rem;
-}
-
 .list{
     list-style-type: none;
     display: flex;
